changed the display of my website and the routing

--- a/views/list.erb
+++ b/views/list.erb
@@ -25,7 +25,7 @@
   <label for="description">Description of the task:</label>
   <input id="description" name="description" type="text">
 
-  <button type="submit">Add task</button>
+  <button type="submit" class="btn black">Add task</button>
 </form>
 
 <hr>
@@ -37,5 +37,5 @@
 </div>
 
 <div class="container">
-  <a href="/"><button class="btn white">Home</a>
+  <a href="/"><button class="btn black">Home</a>
 </div>
