--- a/views/task_edit.erb
+++ b/views/task_edit.erb
@@ -5,5 +5,5 @@
     <label for="description">Redescribe your task:</label>
     <input id="description" name="description" type="text">
 
-    <button type="submit">Update</button>
+    <button type="submit btn black">Update</button>
   </form>
