--- a/views/errors.erb
+++ b/views/errors.erb
@@ -6,5 +6,5 @@
 </ul>
 
 <h5>
-  <a href="/">Return to main page to try again</a>
+  <button type="button" name="button" class="btn red"><a href="/">Return to main page to try again</a></button>
 </h5>
