--- a/views/index.erb
+++ b/views/index.erb
@@ -1,40 +1,42 @@
-<h1>To Do</h1>
+<h1 style="text-align: center;">To Do</h1>
+<hr>
 <h5>here are all your lists</h5>
 <% if @lists.any?() %>
-  <p>Click on a list to see the list of tasks:</p>
-  <ul>
-    <% @lists.each do |list| %>
-      <li>
-        <a href="/lists/<%= list.id() %>">
+<p>Click on a list to see the list of tasks:</p>
+<ul>
+  <% @lists.each do |list| %>
+  <li>
+    <a href="/lists/<%= list.id() %>">
+      <%= list.name() %>
+    </a>
+  </li>
+  <% end%>
+</ul>
+<% else %>
+<p>There are no lists yet!</p>
+<% end %>
+
+  <div class="list">
+    <form action="/lists" method="post">
+      <label for="name">Assign a name to your list:</label>
+      <input id="name" name="name" type="text">
+      <button type="submit" class="waves-effect waves-light btn black">Add list</button>
+    </form>
+  </div>
+  <div class="task">
+<h5>Here are all your tasks:</h5>
+  <p>Add tasks to my list:</p>
+    <form action="/tasks" method="post">
+      <label for="list_id">Select a list</label>
+      <select id="list_id" name="list_id" type="text" class="browser-default">
+        <% @lists.each() do |list| %>
+        <option value="<%= list.id()%>">
           <%= list.name() %>
-        </a>
-      </li>
-      <% end%>
-  </ul>
-  <% else %>
-    <p>There are no lists yet!</p>
-    <% end %>
-
-
-<form action="/lists" method="post">
-  <label for="name">Assign a name to your list:</label>
-  <input id="name" name="name" type="text">
-  <button type="submit" class="waves-effect waves-light btn">Add list</button>
-</form>
-
-<p>Here are all your tasks:</p>
-
-<p>Add tasks to my list:</p>
-<form action="/tasks" method="post">
-  <label for="list_id">Select a list</label>
-  <select id="list_id" name="list_id" type="text" class="browser-default">
-    <% @lists.each() do |list| %>
-      <option value="<%= list.id()%>">
-        <%= list.name() %>
-      </option>
-      <% end %>
-  </select>
-  <label for="description">Description of the task:</label>
-  <input id="description" name="description" type="text">
-  <button type="submit" class="waves-effect waves-light red btn">Add task</button>
-</form>
+        </option>
+        <% end %>
+      </select>
+      <label for="description">Description of the task:</label>
+      <input id="description" name="description" type="text">
+      <button type="submit" class="waves-effect waves-light black btn">Add task</button>
+    </form>
+  </div>
