--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles/master.css">
 </head>
 <header>
 </header>
