--- a/views/success.erb
+++ b/views/success.erb
@@ -1,5 +1,5 @@
 <h1>Success!</h1>
 Your changes have been saved.
 <div class="container">
-    <a href="/"><button class="button btn">Return Home</a>
+    <a href="/"><button class="btn black">Return Home</a>
 </div>
